--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "noImplicitAny": false,
         "removeComments": true,
         "preserveConstEnums": true,
-        "outDir": "./build/",
+        "outDir": "./dist/",
         "sourceRoot": "src",
         "sourceMap": true,
         "pretty": true,
