--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "run": "ts-node ./src/index.ts",
     "prepublishOnly": "tsc -p ./ --outDir dist/",
-    "build": "tsc -p ./ --outDir dist/"
+    "build": "tsc -p ./ --outDir dist/",
+    "git:add": "git add .",
+    "git:commit": "git add . && git commit -am \"code update\"",
+    "git:push": "git push origin master && git push hub master",
+    "git:publish": "npm run build && npm run git:commit && npm run git:push"
   },
   "repository": {
     "type": "git",
